// Vitest Snapshot v1

exports[`Tabs component > renders 1`] = `
<div>
  <div
    class="c-fixGjY c-fixGjY-ixnjYu-theme-light"
    data-orientation="horizontal"
  >
    <div
      aria-orientation="horizontal"
      class="c-gZZKZD c-gZZKZD-eFavRf-theme-light"
      data-orientation="horizontal"
      dir="ltr"
      role="tablist"
      style="outline: none;"
      tabindex="0"
    >
      <button
        aria-controls="radix-2-content-tab1"
        aria-selected="true"
        class="c-dMeHjX c-dMeHjX-LDxTj-theme-light"
        data-orientation="horizontal"
        data-radix-collection-item=""
        data-state="active"
        id="radix-2-trigger-tab1"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Trigger 1
      </button>
      <button
        aria-controls="radix-2-content-tab2"
        aria-selected="false"
        class="c-dMeHjX c-dMeHjX-LDxTj-theme-light"
        data-orientation="horizontal"
        data-radix-collection-item=""
        data-state="inactive"
        id="radix-2-trigger-tab2"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Trigger 2
      </button>
    </div>
    <div
      aria-labelledby="radix-2-trigger-tab1"
      class="c-cWMaKf c-cWMaKf-fwFiEo-theme-light"
      data-orientation="horizontal"
      data-state="active"
      id="radix-2-content-tab1"
      role="tabpanel"
      tabindex="0"
    >
      Important content for tab 1
    </div>
    <div
      aria-labelledby="radix-2-trigger-tab2"
      class="c-cWMaKf c-cWMaKf-fwFiEo-theme-light"
      data-orientation="horizontal"
      data-state="inactive"
      hidden=""
      id="radix-2-content-tab2"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Tabs component > renders mobile view 1`] = `
<div>
  <div
    class="c-fixGjY c-fixGjY-ixnjYu-theme-light"
    data-orientation="horizontal"
  >
    <div
      class="c-dhzjXW c-dhzjXW-icmpvrW-css"
    >
      <button
        aria-label="Scroll Left"
        class="c-fDzwZw c-fDzwZw-kMhpXP-size-xl c-fDzwZw-cmVfvW-cv c-fDwKcF c-fDwKcF-hVkDAC-theme-light c-fDwKcF-ejYaUA-visible-false c-fDwKcF-icezigA-css"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-dbrbZt c-dbrbZt-fLGGKn-size-lg c-dbrbZt-ihFPSGE-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="14 18 8 12 14 6 14 6"
          />
        </svg>
      </button>
      <div
        aria-orientation="horizontal"
        class="c-gZZKZD c-gZZKZD-eFavRf-theme-light"
        data-orientation="horizontal"
        dir="ltr"
        role="tablist"
        style="outline: none;"
        tabindex="0"
      >
        <button
          aria-controls="radix-5-content-tab1"
          aria-selected="true"
          class="c-dMeHjX c-dMeHjX-LDxTj-theme-light"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="active"
          id="radix-5-trigger-tab1"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Trigger 1 which is going to be long
        </button>
        <button
          aria-controls="radix-5-content-tab2"
          aria-selected="false"
          class="c-dMeHjX c-dMeHjX-LDxTj-theme-light"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-5-trigger-tab2"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Trigger 2 which is going to be even longer
        </button>
      </div>
      <button
        aria-label="Scroll right"
        class="c-fDzwZw c-fDzwZw-kMhpXP-size-xl c-fDzwZw-cmVfvW-cv c-fDwKcF c-fDwKcF-hVkDAC-theme-light c-fDwKcF-ejYaUA-visible-false c-fDwKcF-iczsSGP-css"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-dbrbZt c-dbrbZt-fLGGKn-size-lg c-dbrbZt-ihFPSGE-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="10 6 16 12 10 18 10 18"
          />
        </svg>
      </button>
    </div>
    <div
      aria-labelledby="radix-5-trigger-tab1"
      class="c-cWMaKf c-cWMaKf-fwFiEo-theme-light"
      data-orientation="horizontal"
      data-state="active"
      id="radix-5-content-tab1"
      role="tabpanel"
      tabindex="0"
    >
      Important content for tab 1
    </div>
    <div
      aria-labelledby="radix-5-trigger-tab2"
      class="c-cWMaKf c-cWMaKf-fwFiEo-theme-light"
      data-orientation="horizontal"
      data-state="inactive"
      hidden=""
      id="radix-5-content-tab2"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;
